// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotesPage Snapshot Tests > matches snapshot for empty state 1`] = `
<div>
  <div
    class="container py-3 py-md-4"
    style="padding-bottom: 60px;"
  >
    <div
      class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-3 mb-md-4 gap-2"
    >
      <h1
        class="h2 mb-0"
        data-qa="notes-title"
      >
        Notes
      </h1>
      <p
        class="text-muted mb-0 small"
      >
        Notes can only be created from within an application page.
      </p>
    </div>
    <div
      class="card shadow-sm mb-3 mb-md-4"
      data-qa="notes-filters"
    >
      <div
        class="card-body"
      >
        <div
          class="row g-2"
        >
          <div
            class="col-12 col-md-4"
          >
            <label
              class="form-label small"
            >
              Application ID
            </label>
            <input
              class="form-control form-control-sm"
              data-qa="notes-filter-application-id"
              placeholder="Filter by application ID"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="card shadow-sm text-center py-5"
    >
      <div
        class="card-body"
      >
        <p
          class="text-muted mb-4"
          data-qa="notes-empty-state"
        >
          No notes found.
        </p>
        <p
          class="text-muted small mb-3"
        >
          Notes can only be created from within an application page.
        </p>
      </div>
    </div>
    <div
      class="bg-light border-top py-2 px-3 "
      data-qa="status-bar"
      style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 1000;"
    >
      <div
        class="container-fluid"
      >
        <div
          class="d-flex justify-content-between align-items-center"
        >
          <small
            class="text-muted"
            data-qa="status-bar-message"
          >
            Ready
          </small>
          <small
            class="text-muted"
            data-qa="status-bar-timestamp"
          >
            2:35:03 PM
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotesPage Snapshot Tests > matches snapshot for loading state 1`] = `
<div>
  <div
    class="d-flex flex-column align-items-center justify-content-center p-5"
    data-qa="loading"
  >
    <div
      class="spinner-border text-primary mb-3"
      data-qa="loading-spinner"
      role="status"
    >
      <span
        class="visually-hidden"
      >
        Loading...
      </span>
    </div>
    <p
      class="text-muted"
      data-qa="loading-message"
    >
      Loading notes...
    </p>
  </div>
</div>
`;

exports[`NotesPage Snapshot Tests > matches snapshot for notes list 1`] = `
<div>
  <div
    class="container py-3 py-md-4"
    style="padding-bottom: 60px;"
  >
    <div
      class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-3 mb-md-4 gap-2"
    >
      <h1
        class="h2 mb-0"
        data-qa="notes-title"
      >
        Notes
      </h1>
      <p
        class="text-muted mb-0 small"
      >
        Notes can only be created from within an application page.
      </p>
    </div>
    <div
      class="card shadow-sm mb-3 mb-md-4"
      data-qa="notes-filters"
    >
      <div
        class="card-body"
      >
        <div
          class="row g-2"
        >
          <div
            class="col-12 col-md-4"
          >
            <label
              class="form-label small"
            >
              Application ID
            </label>
            <input
              class="form-control form-control-sm"
              data-qa="notes-filter-application-id"
              placeholder="Filter by application ID"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="card shadow-sm"
      data-qa="notes-list-card"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-hover mb-0"
        >
          <thead
            class="table-light"
          >
            <tr>
              <th>
                Application ID
              </th>
              <th
                class="d-none d-md-table-cell"
              >
                Note
              </th>
              <th
                class="d-none d-lg-table-cell"
              >
                Created
              </th>
              <th>
                Actions
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <a
                  class="text-decoration-none"
                  href="/applications/1"
                >
                  1
                </a>
                <div
                  class="d-md-none mt-1"
                >
                  <small
                    class="text-muted text-break"
                  >
                    Initial phone screen went well
                  </small>
                </div>
              </td>
              <td
                class="d-none d-md-table-cell"
              >
                Initial phone screen went well
              </td>
              <td
                class="d-none d-lg-table-cell"
              >
                Jan 1, 2025
              </td>
              <td>
                <div
                  class="d-flex gap-1 gap-md-2"
                >
                  <a
                    class="btn btn-sm btn-outline-primary"
                    href="/notes/1"
                  >
                    View
                  </a>
                  <button
                    class="btn btn-sm btn-outline-danger"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <a
                  class="text-decoration-none"
                  href="/applications/1"
                >
                  1
                </a>
                <div
                  class="d-md-none mt-1"
                >
                  <small
                    class="text-muted text-break"
                  >
                    Follow up scheduled for next week
                  </small>
                </div>
              </td>
              <td
                class="d-none d-md-table-cell"
              >
                Follow up scheduled for next week
              </td>
              <td
                class="d-none d-lg-table-cell"
              >
                Jan 2, 2025
              </td>
              <td>
                <div
                  class="d-flex gap-1 gap-md-2"
                >
                  <a
                    class="btn btn-sm btn-outline-primary"
                    href="/notes/2"
                  >
                    View
                  </a>
                  <button
                    class="btn btn-sm btn-outline-danger"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="bg-light border-top py-2 px-3 "
      data-qa="status-bar"
      style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 1000;"
    >
      <div
        class="container-fluid"
      >
        <div
          class="d-flex justify-content-between align-items-center"
        >
          <small
            class="text-muted"
            data-qa="status-bar-message"
          >
            Ready
          </small>
          <small
            class="text-muted"
            data-qa="status-bar-timestamp"
          >
            2:35:03 PM
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;
